# llm-playground

./: .gitignore  README.md  pyproject.toml
scripts/: convert_model.sh
src/qwen_parser/: __init__.py  config.py  parser.py
