[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen-parser"
version = "0.1.0"
description = "Batch string parser powered by Qwen3.5-9B running locally via MLX"
requires-python = ">=3.10"
dependencies = [
    "mlx-lm>=0.22.0",
    "mlx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_parser"]

[tool.ruff]
line-length = 100
target-version = "py310"
